[gd_scene load_steps=18 format=2]

[ext_resource path="res://screens/gameplay/game_objects/map_node_controller/map_node_controller.gd" type="Script" id=4]
[ext_resource path="res://screens/gameplay/gameplay.gd" type="Script" id=5]
[ext_resource path="res://sfx/pop.wav" type="AudioStream" id=6]
[ext_resource path="res://screens/gameplay/camera/main_camera.gd" type="Script" id=7]
[ext_resource path="res://screens/gameplay/ui/build_panel/assets/build_icon.png" type="Texture" id=8]
[ext_resource path="res://screens/gameplay/ui/build_panel/assets/route_icon.png" type="Texture" id=9]
[ext_resource path="res://sfx/thud.wav" type="AudioStream" id=10]
[ext_resource path="res://screens/gameplay/ui/build_panel/build_panel.gd" type="Script" id=11]
[ext_resource path="res://screens/gameplay/game_objects/ship_controller/ship_controller.gd" type="Script" id=13]
[ext_resource path="res://screens/gameplay/ui/gameplay_ui_controller.gd" type="Script" id=14]
[ext_resource path="res://screens/gameplay/ui/build_panel/assets/warehouse_icon.png" type="Texture" id=15]
[ext_resource path="res://sfx/crack.wav" type="AudioStream" id=17]
[ext_resource path="res://screens/gameplay/ui/menu/menu.tscn" type="PackedScene" id=18]
[ext_resource path="res://screens/gameplay/ui/build_panel/assets/cart_icon.png" type="Texture" id=19]
[ext_resource path="res://screens/gameplay/ui/panel_button/panel_button.tscn" type="PackedScene" id=21]
[ext_resource path="res://screens/gameplay/ui/popup_list/popup_list.gd" type="Script" id=22]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 5.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 0.780392 )
draw_center = false
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Gameplay" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
script = ExtResource( 7 )

[node name="MapNodeController" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PlaceBuildingSFX" type="AudioStreamPlayer2D" parent="MapNodeController"]
stream = ExtResource( 10 )

[node name="PlaceRouteSFX" type="AudioStreamPlayer2D" parent="MapNodeController"]
stream = ExtResource( 6 )

[node name="DemolishSFX" type="AudioStreamPlayer2D" parent="MapNodeController"]
stream = ExtResource( 17 )

[node name="ShipController" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="PlaceShipSFX" type="AudioStreamPlayer2D" parent="ShipController"]
stream = ExtResource( 17 )

[node name="DemolishSFX" type="AudioStreamPlayer2D" parent="ShipController"]
stream = ExtResource( 17 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 10.0
margin_right = 1910.0
margin_bottom = 1050.0
mouse_filter = 2
alignment = 2

[node name="BuildPanel" type="PanelContainer" parent="UI/VBoxContainer"]
margin_top = 705.0
margin_right = 1900.0
margin_bottom = 1050.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
script = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/BuildPanel"]
margin_left = 30.0
margin_top = 5.0
margin_right = 1870.0
margin_bottom = 335.0
grow_horizontal = 0
custom_constants/separation = 4

[node name="Left" type="HBoxContainer" parent="UI/VBoxContainer/BuildPanel/HBoxContainer"]
margin_right = 230.0
margin_bottom = 330.0
custom_constants/separation = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left"]
margin_top = 210.0
margin_right = 100.0
margin_bottom = 330.0
size_flags_vertical = 8
custom_constants/separation = 20
alignment = 2

[node name="RouteSelector" type="VBoxContainer" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
custom_constants/separation = 10
alignment = 2
script = ExtResource( 22 )

[node name="Control" type="Control" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left/VBoxContainer2/RouteSelector"]
margin_right = 100.0
size_flags_vertical = 3

[node name="ROUTE" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left/VBoxContainer2" instance=ExtResource( 21 )]
margin_top = 20.0
margin_bottom = 120.0
backgroundColor = Color( 0.133333, 0.133333, 0.133333, 1 )
icon = ExtResource( 9 )
tooltiptext = "Routes"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left"]
margin_left = 130.0
margin_right = 230.0
margin_bottom = 330.0
custom_constants/separation = 20
alignment = 2

[node name="BuildOptions" type="VBoxContainer" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 210.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2
script = ExtResource( 22 )

[node name="WAREHOUSE" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left/VBoxContainer/BuildOptions" instance=ExtResource( 21 )]
margin_bottom = 100.0
backgroundColor = Color( 0.4, 0.4, 0.4, 0 )
icon = ExtResource( 15 )
tooltiptext = "Warehouse"

[node name="SHIP" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left/VBoxContainer/BuildOptions" instance=ExtResource( 21 )]
margin_top = 110.0
margin_bottom = 210.0
backgroundColor = Color( 0.4, 0.4, 0.4, 0 )
icon = ExtResource( 19 )
tooltiptext = "Ship"

[node name="BUILD" parent="UI/VBoxContainer/BuildPanel/HBoxContainer/Left/VBoxContainer" instance=ExtResource( 21 )]
margin_top = 230.0
margin_bottom = 330.0
backgroundColor = Color( 0.133333, 0.133333, 0.133333, 1 )
icon = ExtResource( 8 )
tooltiptext = "Build"

[node name="Spacing" type="Control" parent="UI/VBoxContainer/BuildPanel/HBoxContainer"]
margin_left = 234.0
margin_right = 234.0
margin_bottom = 330.0
mouse_filter = 1
size_flags_horizontal = 2

[node name="Right" type="HBoxContainer" parent="UI/VBoxContainer/BuildPanel/HBoxContainer"]
margin_left = 1840.0
margin_right = 1840.0
margin_bottom = 330.0

[node name="Menu" parent="." instance=ExtResource( 18 )]
visible = false

[connection signal="focus_exited" from="UI/VBoxContainer/BuildPanel" to="UI/VBoxContainer/BuildPanel" method="_on_focus_lost"]
